--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,15 @@
   {% if site.google_analytics %}
     {% include analytics.html %}
   {% endif %}
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M6V6KQYLYP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-M6V6KQYLYP');
+  </script>
 </body>
 
 </html>
